src/styles/pages/home.scss
@use "src/styles/mixins" as *;

:global {
    #hero-section {
        position: relative;
        overflow: hidden;
        border-bottom: 1px solid var(--divider-color-default);
        height: 75vh;
        min-height: 584px;
        max-height: 1024px;
        .hero-grid {
            position: relative;
            display: grid;
            grid-template-columns: 1fr 1fr;
            height: 100%;
            gap: 64px;
            max-width: 1920px;
            margin: auto;
            align-items: center;
            .button {
                padding: 7px 12px;
                svg {
                    @include icon($size: 18px);
                }
            }
            .split-button {
                position: relative;
                .menu-flyout-container {
                    display: contents;
                    &:last-child .button {
                        padding: 0 8px;
                        svg {
                            @include icon($size: 12px);
                        }
                    }
                }
            }
        }

        canvas {
            z-index: -1;
            opacity: 0.5;
            mask: radial-gradient(at bottom right, var(--background-base), transparent 70%);
            width: 100vh;
            height: 100vh;
            position: absolute;
            bottom: 0;
            right: 0;
        }
        .button svg {
            @include icon($size: 18px);
        }
    }
    .style-standard .hero-button-inner {
        color: var(--text-color-secondary);
        h5 {
            color: var(--text-color-primary);
        }
    }
    @media (prefers-color-scheme: dark) {
        #hero-section canvas {
            opacity: 0.4;
        }
    }
}

.hero- {
    &left {
        @include flex($direction: column, $justify: center);
        flex: 1 1 auto;
    }
    &button-inner {
        @include flex($direction: column);
        font-size: 1rem;
        line-height: normal;
        margin-left: 8px;
        h5 {
            font-size: 1.2rem;
            font-weight: 600;
            margin-bottom: 8px;
            margin: 0;
        }
    }
    &right {
        height: 100%;
        div {
            @include flex($direction: row, $align: center);
            width: 100%;
            height: 100%;
            img {
                position: absolute;
                top: 0;
                width: auto;
                height: 100%;
                -webkit-user-drag: none;
                user-select: none;
                aspect-ratio: 1280 / 960;
                overflow: hidden;
                box-shadow: var(--window-elevation);
                border-radius: calc(var(--overlay-corner-radius) / 2);
                background-color: var(--control-color-disabled);
                border: 1px solid var(--surface-stroke-default);
                border-radius: calc(var(--overlay-corner-radius) / 2);
                backdrop-filter: blur(200px) saturate(150%);             
            }
        }
    }
}

@media only screen and (max-width: 1024px) {
    :global(#hero-section) {
        height: auto;
        max-height: unset;
        .hero-grid {
            grid-template-columns: auto;
            .hero- {
                &left {
                    text-align: center;
                    align-items: center;
                    .buttons-spacer {
                        justify-content: center;
                    }
                }
                &right img {
                    position: relative;
                    width: 100%;
                    height: auto;
                }
            }
        }
    }

}

:global {
    #design-section {
        @include flex($direction: column, $align: center);
        overflow: hidden;
        text-align: center;
    }
}

.design-image {
    @include flex($direction: column, $justify: center, $align: center);
    position: relative;
    width: 80vw;
    height: 100%;
    margin-top: 164px;
    text-align: center;
}

.files- {
    &screenshot, &wallpaper {
        -webkit-user-drag: none;
        user-select: none;
        height: auto;
    }
    &screenshot {
        position: absolute;
        top: -36px;
        left: 0;
        right: 0;
        margin: 0 auto;
        width: 70%;
        max-width: 1024px;
        z-index: 1;
        background-color: var(--layer-color-default);
        border: 1px solid var(--surface-stroke-default);
        border-radius: var(--overlay-corner-radius);
        backdrop-filter: blur(60px) saturate(150%);
        box-shadow: var(--window-elevation);
    }
    &wallpaper {
        position: relative;
        width: 90%;
        max-width: 1440px;
        border-radius: calc(var(--overlay-corner-radius) * 1.5);
        border: 1px solid var(--card-stroke-default);
    }
}

@media only screen and (max-width: 1024px) {
    .design-image {
        margin-top: 120px;
        width: 100%;
    }
    .files- {
        &screenshot {
            top: 0;
        }
        &wallpaper {
            width: 100%;
        }    
    }
}

@media only screen and (max-width: 768px) {
    .files- {
        &screenshot {
            width: 100%;
            top: -64px;
            transform: none !important;
            border-radius: calc(var(--overlay-corner-radius) / 2);
        }
        &wallpaper {
            object-fit: cover;
            width: 170%;
            left: -35%;
            border-radius: 0;
        }
    }
}

:global(#features-section) {
    @include flex($wrap: true);
    background-color: var(--background-base);
}

.features-section- {
    &left {
        flex: 1 1 auto;
    }
    &right {
        width: 50%;
        margin-left: 48px;
    }
}

.feature-cards-container {
    display: block;
    column-count: 2;
    column-gap: 8px;
    :global(.feature-card) {
        margin-bottom: 8px;
    }
}

@media only screen and (max-width: 1164px) {
    .feature-cards-container {
        column-count: 1;
    }
}
/* ... */

